# protoc-gen-starlark

./: BUILD.bazel  Makefile  README.md  WORKSPACE  go.mod  go.sum  go_repositories.bzl  proto_repositories.bzl  repositories.bzl  rules_proto_config.yaml
.github/workflows/: ci.bazelrc  ci.yaml  release.yaml
cmd/protoc-gen-starlark/: BUILD.bazel  main.go  main_test.go  protoc-gen-foo.sh  protoc-gen-foo.star  protoc-gen-foo_test.sh
cmd/protoc-gen-starlark/testdata/: empty.plugin.star  empty.plugin.star.out  simple.plugin.star  simple.plugin.star.out
cmd/protoc-gen-starlark/testdata/protoc-gen-md/: plugin.star
cmd/protoc-gen-starlark/testdata/protoc-gen-md/genfiles/google/protobuf/: unittest.proto.md  unittest_import.proto.md  unittest_import_public.proto.md
pkg/plugin/: BUILD.bazel  plugin.go  plugin_descriptor.pb  plugin_test.go  unittest.proto  unittest_descriptor.pb
pkg/plugin/testdata/: empty.plugin.star.out
